# fastapi-sqlalchemy-mixin

./: Dockerfile  README.md  alembic.ini  api.env  api_config.py  db_config.py  docker-compose.yml  hello.py  postgres.env  pyproject.toml
alembic/: env.py
app/: app.py
app/controllers/: bases.py  error_controllers.py  route_controllers.py
app/error_handlers/: __init__.py  bases.py
app/error_handlers/validations/: base.py  custom_errors.py  handler.py  validation.py
app/middlewares/: token_middleware.py
app/routes/: __init__.py
app/routes/auth/: route.py
app/services/database/: database.py
app/services/database/controllers/: core_controllers.py  filter_controllers.py  mixin_controllers.py  pagination_controllers.py
app/validations/auth/: auth.py
app/validations/request/auth/: auth.py
app/validations/response/auth/: auth.py
application/: api_config.py  app.py  db_config.py
application/controllers/: alembic_controller.py  auth_controllers.py  error_controllers.py  open_api_controllers.py  route_controllers.py  token_controllers.py
application/error_handlers/validations/: base.py  custom_errors.py  handler.py
application/middlewares/: token_middleware.py
application/routes/: routes.py
application/routes/auth/: route.py
application/routes/notes/: route.py
application/routes/users/: route.py
application/schemas/: __init__.py
application/schemas/auth/: model.py
application/schemas/notes/: model.py
application/schemas/users/: model.py
application/services/database/: database.py
application/static/: index.html  item.html
(+10 files in other folders)
