[project]
name = "fastapi-sqlalchemy-mixin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "arrow>=1.3.0",
    "black>=25.1.0",
    "fastapi>=0.115.11",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "requests>=2.32.3",
    "sqlalchemy-mixins>=2.0.5",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
